# mlx-box

./: .gitignore  IMPLEMENTATION-SUMMARY.md  OPTIMIZATION-CHECKLIST.md  OPTIMIZATION-MIGRATION-GUIDE.md  README.md  install.md  install.sh  startup services mgmt.md  startup services setup.md  test-services.sh  update-model.sh  vice-install.sh
config/: settings.env.example  settings.toml.example
docs/: REASONING-FILTER-GUIDE.md  mosh-setup-guide.md
firewall/: install-firewall.sh  pf.conf
frontend/: README.md  index.html  install-service.sh
frontend/static/css/: style.css
frontend/static/js/: app.js
models/: auth-proxy.py  chat-cli.py  chat-server.py  embed-server.py  ocr-server.py  patched_mlx_server.py  patched_mlx_server_no_uvloop.py  pyproject.toml  startup-services-install.sh  startup-services-mgmt.md  startup-services-setup.md
models/voice/: pyproject.toml  tts-server.py  whisper-server.py
scripts/: benchmark-services.sh  collect_system_info.sh  generate_system_report.sh  monitor-memory.sh  restart-all-services.sh  restart-chat.sh  security-audit-mlx.sh  stop-chat.sh  test-services.sh  test-thinking-toggle.sh  validate-config.py
