[project]
name = "models"
version = "0.1.0"
description = "personal mlx setup"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mlx-lm (>=0.25.2,<0.26.0)",
    "sentence-transformers (>=2.7.0)",
    "torch (>=2.0.0)",
    "transformers (>=4.51.0)",
    "numpy (>=2.3.0,<3.0.0)",
    "tokenizers (>=0.21.1,<0.22.0)",
    "accelerate (>=0.21.0)",
    "fastapi (>=0.115.13,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "mlx (>=0.26.1,<0.27.0)",
    "requests (>=2.32.3,<3.0.0)",
    "psutil (>=5.9.8,<6.0.0)",
    "tomlkit (>=0.12.0,<0.13.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.mlx.dependencies]
mlx = "^0.26.1"
mlx-lm = "^0.25.2"

